# megaligner

./: .dockerignore  .gitignore  Align.command  Dockerfile  LICENSE  Makefile  PERFORMANCE.md  README.md  pyproject.toml
.github/workflows/: release-macos.yml
docx_bitext_aligner/: __init__.py  alignment.py  cli.py  config.py  discovery.py  embedding.py  models.py  qa.py  reports.py  runner.py  text.py  tmx.py  utils.py
macos/MEGAligner/: Info.plist  main.swift
scripts/: bootstrap_uv.sh  build_image.sh  build_macos_app.sh  make_align.sh  package_macos_app.sh
tests/: test_alignment.py  test_cli.py  test_config.py  test_discovery.py  test_embedding.py  test_make_align_wrapper.py  test_qa.py  test_runner.py  test_tmx.py
